--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
+<!DOCTYPE html>
 <html>
- 
-<body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+  <head>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
+<link href="index.css" type="text/css" rel="stylesheet">
+
+  </head>
+  
+  <body>
+    <div class="header">
+      <div class="container">
+        <h1>Bestpizza.at</h1>
+        <p>Coming soon</p>
+        <a class="btn" href="#">Learn More</a>
+      </div>
+    </div>
+
+    <div class="nav">
+      <div class="container">
+        <ul>
+          <li>Register</li>
+          <li>Schedule</li>
+          <li>Sponsors</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="container">
+        <img src="https://content.codecademy.com/projects/innovation-cloud/cloud.svg" height="128" width="196">
+        <h2>The new pizza finder in Vienna</h2>
+        <p>Connect with the best pizzerie in Vienna and find the perfect pizza.</p>
+      </div>
+    </div>
+
+    <div class="jumbotron">
+      <div class="container">
+        <h2>Stay Connected</h2>
+        <p>Receive weekly insights from industry insiders.</p>
+        <a class="btn" href="#">Join</a>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <p>&copy; bestpizza.at</p>
+      </div>
+    </div>
+  </body>
 </html>
