Addition of funny GIF

--- a/index.html
+++ b/index.html
@@ -1,52 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
-<link href="index.css" type="text/css" rel="stylesheet">
 
-  </head>
-  
-  <body>
-    <div class="header">
-      <div class="container">
-        <h1>Bestpizza.at</h1>
-        <p>Coming soon</p>
-        <a class="btn" href="#">Learn More</a>
-      </div>
-    </div>
+<head>
+  <title>Main Page</title>
+  <link href="index.css" type="text/css" rel="stylesheet">
+  <link rel="icon"
+    href="C:\Users\Valentin\OneDrive\Personnel\Coding\js_learning\best_pizza\VDans.github.io\data\download.jfif"
+    type="image/x-icon">
+</head>
 
-    <div class="nav">
-      <div class="container">
-        <ul>
-          <li>Register</li>
-          <li>Schedule</li>
-          <li>Sponsors</li>
-          <li>About</li>
-          <li>Contact</li>
-        </ul>
-      </div>
-    </div>
+<body>
+  <p>Welcome to bestpizza.at!</p>
+  <div>
+    <img src="C:\Users\Valentin\OneDrive\Personnel\Coding\js_learning\best_pizza\VDans.github.io\data\pizza_chef.gif" alt="main_pizza_gif" width='100%'>
+  </div>
+</body>
 
-    <div class="main">
-      <div class="container">
-        <img src="https://content.codecademy.com/projects/innovation-cloud/cloud.svg" height="128" width="196">
-        <h2>The new pizza finder in Vienna</h2>
-        <p>Connect with the best pizzerie in Vienna and find the perfect pizza.</p>
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h2>Stay Connected</h2>
-        <p>Receive weekly insights from industry insiders.</p>
-        <a class="btn" href="#">Join</a>
-      </div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p>&copy; bestpizza.at</p>
-      </div>
-    </div>
-  </body>
 </html>
