Correction of links to GIF and logo

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <title>Main Page</title>
   <link href="index.css" type="text/css" rel="stylesheet">
   <link rel="icon"
-    href="C:\Users\Valentin\OneDrive\Personnel\Coding\js_learning\best_pizza\VDans.github.io\data\download.jfif"
+    href="download.jfif"
     type="image/x-icon">
 </head>
 
 <body>
   <p>Welcome to bestpizza.at!</p>
   <div>
-    <img src="C:\Users\Valentin\OneDrive\Personnel\Coding\js_learning\best_pizza\VDans.github.io\data\pizza_chef.gif" alt="main_pizza_gif" width='100%'>
+    <img src="pizza_chef.gif" alt="main_pizza_gif" width='100%'>
   </div>
 </body>
 
