--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 
 <head>
   <title>Main Page</title>
-  <link href="index.css" type="text/css" rel="stylesheet">
-  <link rel="icon"
-    href="download.jfif"
-    type="image/x-icon">
+  <link href="style.css" type="text/css" rel="stylesheet">
+  <link rel="icon" href="download.jfif" type="image/x-icon">
 </head>
 
 <body>
-  <p>Welcome to bestpizza.at!</p>
+  <div class=topnav>
+    <nav>
+      <ul>
+        <li><a href="pizza_of_the_day.html">Pizza of the day</a></li>
+        <li><a href="discover.html">Discover</a></li>
+        <li><a href="compare.html">Compare</a></li>
+        <li><a href="history.html">Some history</a></li>
+        <li><a href="jobs.html">Jobs</a></li>
+        <li><a href="contact.html">Contact us!</a></li>
+      </ul>
+    </nav>
+  </div>
+
   <div>
-    <img src="pizza_chef.gif" alt="main_pizza_gif" width='100%'>
+    <img src="pizza_chef.gif" alt="main_pizza_gif" width='100%' height='20%';>
   </div>
 </body>
 
