--- a/compare.html
+++ b/compare.html
@@ -1,21 +1,1 @@
-This page is intended to provide a "finding tool" to filter the most suitable pizzas around you.
-The page layout is supposed to be: 
-    # Main nav bar to go to other pages 
-    # Banner div where you select your criteria
-    # Main div as rest of the page with the results
-
-<!DOCTYPE html>
-<html>
-
-<head>    
-    <link rel="stylesheet" href="style.css">
-    <title>Comparison tool</title>
-</head>
-
-<body>
-    <div class='banner'>
-        <form action="" autocomplete="off" ></form>
-    </div>
-</body>
-
-</html>
+<p>On this page, you will find a comparer of the pizzas in the neighbourhood</p>
