--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
   <title>Main Page</title>
-  <link href="style.css" type="text/css" rel="stylesheet">
+  <link href="index.css" type="text/css" rel="stylesheet">
   <link rel="icon" href="download.jfif" type="image/x-icon">
 </head>
 
 <body>
+  <div class=logo>
+Best Pizza
+  </div>
+  
   <div class=topnav>
     <nav>
       <ul>
@@ -17,13 +21,32 @@
         <li><a href="history.html">Some history</a></li>
         <li><a href="jobs.html">Jobs</a></li>
         <li><a href="contact.html">Contact us!</a></li>
+        
+
+        <li><input type="text" placeholder="Search.."></li>
+        <li><i></i></li>
       </ul>
+   
     </nav>
   </div>
 
   <div>
     <img src="pizza_chef.gif" alt="main_pizza_gif" width='100%' height='20%';>
   </div>
+
+  <div id="container">
+    <div class="logos" ><a href=""> <img src="/Users/Mini/Library/Mobile Documents/com~apple~CloudDocs/Privat/Coding/bestpizza/pizza2.png" alt="Pizza" width="70" lenght="70">
+    </a> </div>
+    <div class="logos" > <a href="">
+      <img src="/Users/Mini/Library/Mobile Documents/com~apple~CloudDocs/Privat/Coding/bestpizza/truck.png" alt="Deliver" width="70" lenght="70">
+      </a> </div>
+    <div class="logos" >   <a href="">
+      <img src="/Users/Mini/Library/Mobile Documents/com~apple~CloudDocs/Privat/Coding/bestpizza/pay.png" alt="Pay" width="70" lenght="70">
+      </a></div>
+  </div>
+
+
+
 </body>
 
 </html>
