Changed Headlines and Descriptions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
 
 
-  <title>Latest Information on the Coronavirus Situation in Austria</title>
+  <title>Where is the best Pizza in town</title>
 
   <meta name="description"
     content="Protective measures, entry regulations and co.: everything you need to know for your holiday in Austria in times of coronavirus." />
@@ -277,16 +277,16 @@
           <div class="is-left">
             <ul class="vertical large-horizontal menu">
               <li class="menu-text show-for-large">
-                THE OFFICIAL TRAVEL PORTAL
+                Best Pizza
               </li>
               <li class="menu-item">
                 <a class="menu-item-link dropdown" href="/en/convention" title="Convention"
-                  aria-label="Convention">Convention</a>
+                  aria-label="Convention">Contact</a>
 
               </li>
 
               <li class="menu-item">
-                <a class="menu-item-link dropdown" href="/en/b2b" title="B2B" aria-label="B2B">B2B</a>
+                <a class="menu-item-link dropdown" href="/en/b2b" title="B2B" aria-label="B2B">Impressum</a>
 
               </li>
 
@@ -414,53 +414,53 @@
                 <li class="menu-item">
                   <a class="menu-item-link js-hover-underline-link is-motion" href="/en/active-outdoors"
                     data-category="motion" data-gtm-element="menu-main" title="Active &amp; Outdoors"
-                    aria-label="Active &amp; Outdoors">Active &amp; Outdoors</a>
+                    aria-label="Active &amp; Outdoors">About</a>
 
                 </li>
 
                 <li class="menu-item">
                   <a class="menu-item-link js-hover-underline-link is-inspiration" href="/en/culture"
                     data-category="inspiration" data-gtm-element="menu-main" title="Culture"
-                    aria-label="Culture">Culture</a>
+                    aria-label="Culture">Best Pizza</a>
 
                 </li>
 
                 <li class="menu-item">
                   <a class="menu-item-link js-hover-underline-link is-recovery" href="/en/wellbeing-nature"
                     data-category="recovery" data-gtm-element="menu-main" title="Wellbeing"
-                    aria-label="Wellbeing">Wellbeing</a>
+                    aria-label="Wellbeing">Pizza History</a>
 
                 </li>
 
                 <li class="menu-item">
                   <a class="menu-item-link js-hover-underline-link is-nutrition" href="/en/food-and-drink"
                     data-category="nutrition" data-gtm-element="menu-main" title="Food &amp; Drink"
-                    aria-label="Food &amp; Drink">Food &amp; Drink</a>
+                    aria-label="Food &amp; Drink">Pizzeria &amp; Pizzaiolo</a>
 
                 </li>
 
                 <li class="menu-item">
                   <a class="menu-item-link js-hover-underline-link is-normal is-current"
                     href="/en/service-and-facts/coronavirus-information" data-category="normal"
-                    data-gtm-element="menu-main" title="Covid-19" aria-label="Covid-19">Covid-19</a>
+                    data-gtm-element="menu-main" title="Covid-19" aria-label="Covid-19">Best Pizza Shop</a>
 
                 </li>
 
                 <li class="menu-item">
                   <a href="#" class="menu-item-link js-hover-underline-link " title="Travel &amp; Info"
                     aria-label="Travel &amp; Info" data-category="normal" data-toggle="info-menu"
-                    data-gtm-element="menu-main">Travel &amp; Info</a>
+                    data-gtm-element="menu-main">Order</a>
 
                   <ul class="menu vertical hide-for-large">
                     <li class="menu-item">
                       <a class="menu-item-link " href="/en/things-to-do" data-category="normal"
-                        data-gtm-element="menu-main" title="Things to Do" aria-label="Things to Do">Things to Do</a>
+                        data-gtm-element="menu-main" title="Things to Do" aria-label="Things to Do">Best Pizza Shop</a>
 
                       <ul class="menu vertical hide-for-large">
                         <li class="menu-item">
                           <a class="menu-item-link " href="/en/things-to-do/skiing-and-winter" data-category="normal"
-                            data-gtm-element="menu-main" title="Skiing and Winter" aria-label="Skiing and Winter">Skiing
-                            and Winter</a>
+                            data-gtm-element="menu-main" title="Skiing and Winter" aria-label="Skiing and Winter">Contact us 
+                          </a>
 
                         </li>
 
@@ -1310,13 +1310,13 @@
 
             <li class="breadcrumb-item grid-x">
               <a href="/en/service-and-facts" class="breadcrumb-link flexwidth" title="Service and Facts"
-                aria-label="Service and Facts">Service and Facts</a>
+                aria-label="Service and Facts">Pizza</a>
             </li>
 
 
 
             <li class="breadcrumb-item grid-x">
-              <span class="breadcrumb-link is-current">Covid-19</span>
+              <span class="breadcrumb-link is-current">Pizza of the Day</span>
             </li>
 
 
@@ -1345,15 +1345,14 @@
 
         <div class="b-intro">
           <h2 class="intro-headline">
-            Up-to-date Information on the Coronavirus Situation
+            Up-to-date Information on the Best Pizza in Town
           </h2>
 
           <div class="row">
             <div class="small-12 xlarge-10 xlarge-offset-1 columns intro-text">
-              <p>The government are closely monitoring the Coronavirus situation in Austria and introducing measures
-                where needed. Please always check both Austrian and your home country's regulations before travelling.
+              <p>Best Pizza has tasted its way through Viennas Pizza selection to offer you the most accurate ranking based on size, taste, quality, price. 
               </p>
-              <p>Last update: 19 April</p>
+             
             </div>
           </div>
         </div>
@@ -1376,7 +1375,7 @@
 
           <header class="b-heading">
             <h3 class="heading-title  u-content-escape-container-small">
-              Current Situation in Austria
+              Pizzuation in Vienna
             </h3>
 
           </header>
